index adapted with personal data

--- a/index.html
+++ b/index.html
@@ -6,6 +6,30 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <header>
+        <h1>Simon Riedmann</h1>
+    </header>
+    <main>
+        <section>
+            <h2>Persönliche Daten</h2>
+                <ul></ul>
+                    <li></li>
+                    <li></li>
+                    <li></li>
+        </section>
+        <section>
+            <h2>Berufliche Laufbahn</h2>
+        </section>
+        <section>
+            <h2>Ausbildung</h2>
+        </section>
+        <section>
+            <h2>Fähigkeiten</h2>
+        </section>
+    </main>
+    <footer>
+        <h2>Kontakt</h2>
+        <button>Abschicken</button>
+    </footer>
 </body>
 </html>
