--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 <body>
     <header>
         <h1>Simon Riedmann</h1>
+        <nav>
+
+        </nav>
     </header>
     <main>
         <section>
@@ -29,6 +32,10 @@
     </main>
     <footer>
         <h2>Kontakt</h2>
+        <href a="">LinkedIn</href>
+        <href a="">GitHub</href>
+        <href a=""></href>
+        <input type="text">
         <button>Abschicken</button>
     </footer>
 </body>
