--- a/index.html
+++ b/index.html
@@ -3,69 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Simon Riedmann</title>
 </head>
 <body>
     <header>
         <h1>Simon Riedmann</h1>
         <nav>
-            <a href=#bio>Biografie</a>
-            <a href=#contact>Kontakt</a>
+            <a href=#bio>Biography</a>
+            <a href=#contact>Contact</a>
         </nav>
-        <img src="images/bild.jpeg" alt="bolivien bild" width=300>
-        <p>Hi und herzlich willkommen auf meiner Website! Ich bin Simon und 24 Jahre alt. Hier findest du Infos über mich. Solltest du noch Fragen haben, schick mir gerne eine Nachricht über das Kontaktformular oder schreibe mir auf den Socials</p>
+        <img src="images/profile.JPG" alt="bolivien bild" width=300>
+        <p>Hi and welcome to my personal website! I hope you like it and find some information about myself. If you would like to know something else, just write me a message.</p>
         <hr>
     </header>
     <main>
-
-        <section>
-            <h2>Infos</h2>
-                <h3>Skills</h3>
-                    <h4>Sprachen</h4>
-                        <ul>
-                            <li>Deutsch</li>
-                            <li>Englisch</li>
-                            <li>Spanisch</li>
-                            <li>Französisch</li>
-                        </ul>
-                    <h4>Computerkenntnisse</h4> 
-                        <ul>
-                            <li>Microsoft Office</li>
-                            <li>SAP</li>
-                            <li>Git/GitHub</li>
-                            <li>Shell</li>
-                            <li>HTML</li>
-                        </ul>
-                <hr>
-                <h3>Interessen</h3>
-                    <ul>
-                        <li>Backpacking/Fremde Kulturen</li>
-                        <li>Outdoor-Sportarten (Wandern, Fahrradfahren, Snowboarden)</li>
-                        <li>Fitness</li>
-                        <li>Jugendgruppenleiter/Kassierer bei Pfadfinder Gundelfingen</li>
-                    </ul>
-                <hr>     
-        </section>
-        <section>
-            <h2>Kontaktinformationen</h2>
-                <ul>
-                    <li>Nummer: +49 152 24637636</li>
-                    <li>Mail: simon.riedmann@web.de</li>
-                </ul>
-                <a href="https://www.linkedin.com">
-                    <img src="images/LinkedIn.png" alt="LinkedIn icon" width=200>
-                </a>
-                <a href="https://github.com/simonriedmann">
-                    <img src="images/GitHub-Mark.png" alt="github icon" width=200>
-                </a>
-        </section>
-
         <section id="bio">
-            <h2>Lebenslauf</h2>
-            <h3>Praktische Erfahrung</h3>
+            <h2>CV</h2>
+            <h3>Job experience</h3>
             <table>
                 <tr>
-                    <th>Jahr</th>
+                    <th>Year</th>
                     <th>Job</th>
                 </tr>
                 <tr>
@@ -74,57 +31,100 @@
                 </tr>
                 <tr>
                     <td>2019-2020</td>
-                    <td>Key-Account-Manager Spanien/Lateinamerika bei BWF Envirotec</td>
+                    <td>Key-Account-Manager Spain/Latin America at BWF Envirotec</td>
                 </tr>
-                <tr>
-                    <td>Okt. 2018 - Dez. 2018</td>
-                    <td>Backpacking-Reise Südamerika</td>
-                </tr>
+
             </table>
             <hr>
-            <h3>Ausbildung</h3>
+            <h3>Education</h3>
             <table>
                 <tr>
-                    <th>Jahr</th>
-                    <th>Ausbildung</th>
+                    <th>Year</th>
+                    <th>Education</th>
                 </tr>
                 <tr>
                     <td>Sept. 2015 - Sept. 2018</td>
-                    <td>DHBW Heidenheim Bachelor of Arts BWL</td>
+                    <td>DHBW Heidenheim Bachelor of Arts Business Administration</td>
                 </tr>
                 <tr>
                     <td>2015</td>
-                    <td>Abitur</td>
+                    <td>Graduation</td>
                 </tr>
             </table>
             <hr>
         </section>
+        <section>
+            <h2>General information</h2>
+                <h3>Skills</h3>
+                    <h4>Languages</h4>
+                        <ul>
+                            <li>German</li>
+                            <li>English</li>
+                            <li>Spanish</li>
+                            <li>French</li>
+                        </ul>
+                    <h4>Computer skills</h4> 
+                        <ul>
+                            <li>Microsoft Office</li>
+                            <li>SAP</li>
+                            <li>Git/GitHub</li>
+                            <li>Shell</li>
+                            <li>HTML</li>
+                        </ul>
+                <hr>
+                <h3>Interests</h3>
+                    <ul>
+                        <li>Backpacking/foreign countries</li>
+                        <li>Outdoor stuff (Trekking, biking, snowboarding)</li>
+                        <li>Fitness</li>
+                    </ul>
+                <hr>     
+        </section>
+        <section>
+            <h2>Contact</h2>
+                <ul>
+                    <li>Number: +49 152 24637636</li>
+                    <li>Mail: simon.riedmann@web.de</li>
+                </ul>
+                <a href="https://www.linkedin.com/in/simon-riedmann/" target="_blank">
+                    <img src="images/LinkedIn.png" alt="LinkedIn icon" width=100>
+                </a>
+                <a href="https://github.com/simonriedmann" target="_blank">
+                    <img src="images/GitHub-Mark.png" alt="github icon" width=80>
+                </a>
+                <a href="https://codepen.io/simonrie" target="_blank">
+                    <img src="images/codepen.png" alt="github icon" width=75>
+                </a>
+                <hr>
+        </section>
+
+ 
     </main>
     <footer>
-        <h2 id="contact">Kontakt</h2>
+        <h2 id="contact">Contact sheet</h2>
         <form>
-            <label>Vorname:
+            <label>First name:
                 <input type="text">
             </label>
-            <label>Nachname:
+            <label>Last name:
                 <input type="text">
             </label>
-            <p>Geschlecht</p>
+            <p>Gender</p>
                 <label>
-                    <input type="radio"> männlich
+                    <input type="radio"> male
                 </label>
                 <label>
-                    <input type="radio"> weiblich
+                    <input type="radio"> female
                 </label>
                 <label>
-                    <input type="radio"> divers
+                    <input type="radio"> other
                 </label>
                 <br>
-                <label> Nachricht
+                <label> Message
                     <textarea cols="30" rows="10"></textarea>
                 </label>
                 <br>
-                <button>Absenden</button>
+                <button>Submit</button>
         </form>
 
     </footer>
