HTML + CSS adapted

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 </li>
             </ul>
         </nav>
-        <img src="images/profile.JPG" alt="bolivien bild" width=300 class="profile">
+        <img src="images/profile.JPG" alt="profilbild" width=300 class="profile">
         <p>Hi and welcome to my personal website! I hope you like it and find some information about myself. If you would like to know something else, just write me a message.</p>
         <hr>
     </header>
