final version of dev branch

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header class="header">
         <h1>Simon Riedmann</h1>
         <img src="images/profile.JPG" alt="profilbild" width=300 class="profile">
-        <nav class="navcontainer">
+        <nav class="navigation">
             <ul>
                 <li>
                     <a href=#about class="navlinks">About</a>
@@ -47,7 +47,7 @@
             <h2 id="biography" class="headingbio">Biography</h2>
             <hr>
             <h3>Job experience</h3>
-            <table>
+            <table class="tablestructure"></table>
                 <tr>
                     <th>Year</th>
                     <th>Job</th>
